# easymcp

./: .prettierignore  .prettierrc.json  README-to-be-merged.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  react-router.config.ts  requirements.txt  tailwind.config.ts  tsconfig.json  vite.config.ts
ai/prettifier/: main.py
modelcontextutils/: CHANGELOG.md  package.json  tsconfig.json
modelcontextutils/scripts/: github-scraper.ts  mint-repos.json  try-mcp-server-bey.ts  try-mcp-server.ts  try-publish.ts  tsconfig.json
openapis/: README.MD  script.py
openapis/results/: aci_dev.json  aci_dev.yaml  bey_dev.json  bey_dev.result.json  bey_dev.yaml  bey_dev_api.json  bey_dev_pretty.json  cal.json  cal_debug.txt  cal_pretty.json  livekit.json  midday.json  mistral.json  socialbundle.json
prettifier/: main.py  requirements.txt
scripts/: convert_to_json.py  github-scraper.ts  mint-repos-urls.json  mint-repos.json  template.ts  try-mcp-server.ts
src/: entry.client.tsx  sitemap-to-openapi.test.ts  sitemap-to-openapi.ts
src/cli/: openapi-to-mcp.ts
src/generators/: npm-publisher.ts
src/lib/: get-available-port.ts  github-scraper.ts  mcp-bey.test.ts  mcp-bye.test.ts  mcp-integration.test.ts  mcp.test.ts  mcp.ts  npm-publish.ts  sitemap-to-openapi.test.ts  sitemap-to-openapi.ts
src/routes/: _index.tsx
src/server/: index.ts  openapi-generator-server.ts
website/: Dockerfile  package.json  tsconfig.json
website/scripts/: mint-repos-urls.json  try-publish.ts
website/src/: root.tsx  server.ts
(+18 files in other folders)
